--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,10 @@
 version: 2.1
 jobs:
   build:
-    machine:
-      image: 'ubuntu-1604:201903-01'
+    docker:
+      - image: https://github.com/amazonlinux/container-images/blob/3209338a28f4fa5f0a189e517c0809d095c777d8/Dockerfile
     steps:
       - checkout
       - run: |
          echo "Hello world!"
-
+         ./scripts/install_grafana.sh
