--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,71 @@
-version: 2.1
+version: 2
 jobs:
   build:
     docker:
-      - image: https://github.com/amazonlinux/container-images/blob/3209338a28f4fa5f0a189e517c0809d095c777d8/Dockerfile
+      - image: circleci/ruby:2.5.8-node-browsers
+        environment:
+          RAILS_ENV: test
+          AWS_DEFAULT_REGION: us-west-2
+          EB_APP_NAME: api
+      - image: mdillon/postgis:11
+        environment:
+          POSTGRES_USER: safecast
+          POSTGRES_DB: safecast
+          POSTGRES_PASSWORD: ""
+      - image: docker.elastic.co/elasticsearch/elasticsearch:7.5.0
+        environment:
+          discovery.type: single-node
     steps:
       - checkout
+      - run:
+          name: Install build tools
+          command: |
+            sudo apt-get update
+            sudo apt-get install -y postgresql-client python-pip
+            sudo pip install awsebcli awscli
+      - restore_cache:
+          keys:
+            - safecastapi-{{ checksum "Gemfile.lock" }}
+            - safecastapi-
+      - run:
+          name: Bundle Install
+          command: bundle install --path vendor/bundle
+      - save_cache:
+          key: safecastapi-{{ checksum "Gemfile.lock" }}
+          paths:
+            - vendor/bundle
+      - run:
+          name: Wait for postgres
+          command: dockerize -wait tcp://localhost:5432 -timeout 1m
+      - run:
+          name: Wait for elasticsearch
+          command: dockerize -wait tcp://localhost:9200 -timeout 1m
+      - run:
+          name: Configure database
+          command: cp config/database.yml.ci config/database.yml
+      - run:
+          name: Load schema
+          command: |
+            psql -h localhost -p 5432 -U safecast safecast -c 'DROP EXTENSION postgis CASCADE'
+            bundle exec rake db:schema:load --trace
+      - run:
+          name: Run rubocop
+          command: |
+            bundle exec rubocop
+      - run:
+          name: Run assets precompile
+          command: |
+            bundle exec rake assets:precompile
+      - run:
+          name: Run rspec
+          command: |
+            bundle exec rspec --profile 10 \
+                              --format RspecJunitFormatter \
+                              --out test_results/rspec.xml \
+                              --format progress \
+                              $(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)
+      - store_test_results:
+          path: test_results
       - run: |
          echo "Hello world!"
          ./scripts/install_grafana.sh
