--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -33,3 +33,6 @@ callback_url = http://grafana:3000/
 
 [security]
 allow_embedding = true
+
+[plugins]
+allow_loading_unsigned_plugins = panodata-map-panel
