--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -18,6 +18,9 @@ auth_url = https://github.com/login/oauth/authorize
 token_url = https://github.com/login/oauth/access_token
 allow_sign_up = true
 allowed_organizations = Safecast
+role_attribute_path = contains(info.roles[*], 'admin') && 'GrafanaAdmin' || 'Viewer'
+allow_assign_grafana_admin = true
+
 
 [external_image_storage]
 provider = s3
