Put comment in env example
Looks like docker compose doesn't exec $() anymore.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-KIBANA_BASIC_AUTH=$(echo 'MYUSER:MYPASS' | base64 -i -)
+# replace with $(echo 'reporting-proxy:PASSWORD' | base64 -i -)
+KIBANA_BASIC_AUTH=CHANGE_THIS_VALUE
 GF_DATABASE_TYPE=sqlite3
