--- a/proxy/templates/grafana.conf.template
+++ b/proxy/templates/grafana.conf.template
@@ -4,6 +4,8 @@ server {
     server_name grafana.* grafana-dev.*;
 
     location / {
+      proxy_set_header Host grafana;
+      proxy_set_header Origin http://grafana:3000;
       proxy_pass http://grafana:3000;
     }
 }
